# lin-rufus

./: .gitignore  CONTRIBUTING.md  DEPENDENCIES.md  DIFFERENCES.md  Makefile.am  Makefile.in  QA.md  aclocal.m4  build-rufus-linux.sh  build-rufus-mingw.sh  configure  configure.ac  configure~  cppcheck.suppress  features.md  run_tests.sh
.github/workflows/: linux.yml
.mingw/: Makefile.in
doc/: linux-architecture.md  rufus.1
packaging/appimage/: README.md  build-appimage.sh
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rufus.install  rules
packaging/flatpak/: ie.akeo.rufus.yaml
packaging/rpm/: rufus.spec
packaging/snap/: snapcraft.yaml
res/: ie.akeo.rufus.appdata.xml  ie.akeo.rufus.desktop  ie.akeo.rufus.policy
res/loc/: Makefile.in  rufus.loc
src/: Makefile.am  Makefile.in  rufus  rufus.h
src/bled/: Makefile.am  Makefile.in  bb_archive.h  decompress_unzip.c  libbb.h
src/common/: boot_validation.c  boot_validation.h  bootloader_scan.c  bootloader_scan.h  cregex_compile.c  device_monitor.h  drive.c  drive.h  format.c  format_ext.c  format_fat32.c  format_fat32.h  hash_algos.c  hash_db.c  hash_pe.c  iso_check.c  iso_config.c  iso_config.h  iso_report.c  iso_report.h  iso_scan.c  iso_scan.h  label.h  localization.c  net_utils.c  net_utils.h  oobe_locale.h  parser.c  stdfn.c  stdio.c  timezone_name.h  wue.c
src/ext2fs/: Makefile.am  Makefile.in  config.h  ext2_types.h  nt_io.c  posix_io.c
src/libcdio/: config.h
src/libcdio/driver/: Makefile.am  Makefile.in  cdio_stubs.c
src/libcdio/iso9660/: Makefile.in
src/libcdio/udf/: Makefile.in
src/linux/: badblocks.c  boot_validation.c  boot_validation.h  cli.c  cli.h  combo_bridge.c  combo_bridge.h  crash_handler.c  crash_handler.h  csm_help.c  csm_help.h  darkmode.c  dev.c  device_combo.c  device_combo.h  device_monitor.c  dos.c  dos_locale.c  download_resume.c  download_resume.h  drag_drop.c  drag_drop.h  drive.c  drive_linux.h  dump_fat.c  efi.h  format.c  format_ext.c  format_ext_tools.c  format_fat32.c  format_linux.h  freedos_data.c  freedos_data.h  gen_bcd_template.py  globals.c  hash.c  hyperlink.c  hyperlink.h  icon.c  image_scan.c  (+64 more)
src/linux/compat/: accctrl.h  aclapi.h  basetsd.h  cfgmgr32.h  commctrl.h  commdlg.h  crtdbg.h  crtdefs.h  dbghelp.h  dbt.h  delayimp.h  direct.h  dwmapi.h  gpedit.h  guiddef.h  initguid.h  intrin.h  io.h  knownfolders.h  malloc.h  msapi_utf8.h  msg_dispatch.c  msg_dispatch.h  netlistmgr.h  objbase.h  oleacc.h  process.h  propvarutil.h  psapi.h  richedit.h  rpc.h  sddl.h  setupapi.h  share.h  shellapi.h  shlguid.h  shlobj.h  shlwapi.h  shobjidl.h  strsafe.h  (+16 more)
src/linux/compat/ddk/: ntddk.h
src/ms-sys/: Makefile.in
src/ms-sys/inc/: file.h  mbr_grub_secondary.h
src/syslinux/libfat/: Makefile.in
src/syslinux/libinstaller/: Makefile.in
src/syslinux/win/: Makefile.in
src/wimlib/: Makefile  Makefile.am  Makefile.in  config.h  unix_apply.c  wim.c  wimlib_tchar.h
src/wimlib/wimlib/: file_io.h
src/windows/: drive.c  drive.h  format.c  format_ext.c  format_fat32.c  gpt_types.h  hash.c  iso.c  localization.c  localization.h  localization_data.h  mbr_types.h  oobe_locale.c  parser.c  pki.c  rufus.c  rufus.h  stdfn.c  stdio.c  timezone.c  vhd.h  wue.c  wue.h
tests/: .gitignore  Dockerfile  Makefile  badblocks_integration_glue.c  bootloader_scan_linux_glue.c  cli_linux_glue.c  crash-48441ce11df13277c93252b4b03c448e772f50e1  crash-4e7142299f177b14a267aab53417190316a203d9  crash-528d8bc5f7eb7fa11514e3cd3abc717f84716aec  dbx_linux_glue.c  dos_linux_glue.c  download_resume_linux_glue.c  dump_fat_linux_glue.c  e2e_linux_glue.c  fido_linux_glue.c  format_linux_glue.c  format_ntfs_exfat_glue.c  format_thread_linux_glue.c  framework.h  fuzz_iso.c  fuzz_iso_glue.c  fuzz_parser  fuzz_parser.c  fuzz_parser_glue.c  fuzz_pe  fuzz_pe.c  hash_linux_glue.c  hash_win_glue.c  install-deps.sh  iso_linux_glue.c  iso_report_linux_glue.c  iso_save_linux_glue.c  locale_download_linux_glue.c  loopback_linux_glue.c  net_linux_glue.c  partition_types_common_glue.c  rufus_ui_automation.py  settings_linux_glue.c  syslinux_linux_glue.c  test_analyze_br_common.c  (+245 more)
tests/corpus/parser/: crash-598321bafdd20af6f6f45a385b8a148186c233d4
